# knowledge-retrieval

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: partitions.json
docker/: Dockerfile.server  dagster.Dockerfile  dagster.yaml  fly.toml  workspace.yaml
docs/: MORNING-HANDOFF.md  architecture.dot  kg-overview.html  operations.md  prototype-claude-extraction.md
evals/: README.md  benchmark.json
notebooks/: smoke_test.ipynb
pipeline/: analysis.py  chunking.py  cypher.py  definitions.py  embedding.py  extraction.py  extraction_anthropic.py  jobs.py  parsing.py.docling-bak  partitions.py  research_port.py  resolver.py  resources.py  schedules.py  schema.py  sensors.py  source.py  storage.py  text_norm.py
scripts/: backfill_citations.py  backfill_concept_descriptions.py  backfill_mentions.py  discover_partitions.py  eval_agent.py  eval_extraction.py  init_neo4j.py  init_postgres.py  issue_token.py  reset_graph.py  run_eval.py  smoke_server.py  snapshot_vault.py  wipe_book.py
server/: app.py  auth.py  graph.py  main.py  queries.py  retrieve.py  settings.py  tools.py
spec/: 01-schema.md  02-ingestion.md  03-extraction-prompts.md  04-alias-resolution.md  05-query-router.md  06-filtering-fallback.md  07-updates.md  08-mvp-plan.md  09-abstractness-review.md  10-alethograph-mvp.md
tests/: conftest.py  test_analysis.py  test_book_chunking.py  test_book_definitions.py  test_book_extraction.py  test_book_identity.py  test_book_labels.py  test_book_metadata.py  test_book_outline.py  test_book_parsing.py  test_book_partitions.py  (+31 more)
(+82 files in other folders)
